# Agent-Kernel

./: .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: publish.yml
examples/distributed_test/: README.md  custom_pod_manager.py  run_simulation.py
examples/standalone_test/: README.md  registry.py  run_simulation.py  run_wisdom_experiment.py
examples/standalone_test/configs/: agents_config.yaml  environment_config.yaml  models_config.yaml  simulation_config.yaml  survey_agents_config.yaml  survey_environment_config.yaml  survey_simulation_config.yaml  system_config.yaml  wisdom_agents_config.yaml  wisdom_environment_config.yaml  wisdom_simulation_config.yaml
examples/standalone_test/data/agents/: profiles.jsonl  status.jsonl
examples/standalone_test/data/map/: agents.jsonl
examples/standalone_test/data/relation/: relation.jsonl
examples/standalone_test/tests/: test_agent_plugins.py  test_reflect_plugin.py  test_status_plugin.py
scripts/: start_society_panel.bat  start_society_panel.sh
society-panel/: README.md
society-panel/backend/app/: main.py
society-panel/backend/app/api/: recordings.py
society-panel/backend/app/services/: simulation_manager.py
society-panel/frontend/: package.json  vite.config.js
society-panel/frontend/src/: App.vue
society-panel/frontend/src/components/: ConfirmDialog.vue  FileUpload.vue
society-panel/frontend/src/composables/: useAnalytics.js  useSurveyAnalytics.js
society-panel/frontend/src/router/: index.js
tests/: test_standalone_recording.py
(+55 files in other folders)
