[project]
name = "agentkernel-workspace"
version = "0.0.0"
description = "Agent-Kernel monorepo workspace"
requires-python = ">=3.11,<3.13"
dependencies = [
    "agentkernel-standalone[all]",
    "agentkernel-distributed[all]",
]

[tool.uv]
managed = true

[tool.uv.sources]
agentkernel-standalone = { workspace = true }
agentkernel-distributed = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/agentkernel-standalone",
    "packages/agentkernel-distributed",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
panel = [
    "python-multipart",
]
